<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/dimen_20dp"
    android:layout_marginLeft="@dimen/dimen_20dp"
    android:layout_marginRight="@dimen/dimen_20dp"
    android:layout_marginTop="@dimen/dimen_20dp"
    android:background="@drawable/dotted_shape"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/enter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/dimen_text_22"
                android:textStyle="bold"
                android:text="@string/enter" />

            <!-- Country -->
            <TextView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:textStyle="bold"
                android:text="@string/country" />

            <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/SpinnerTextViewItem" />

            <!-- Consulat Name -->
            <TextView
                android:id="@+id/consulat_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/consulat_name" />

            <EditText
                android:id="@+id/consulat_name_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <!-- Street -->
            <TextView
                android:id="@+id/street"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/street" />

            <EditText
                android:id="@+id/street_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:singleLine="true" />


            <!--Zip Code -->
            <TextView
                android:id="@+id/zipcode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/zipcode" />

            <EditText
                android:id="@+id/zipcode_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <!-- City -->
            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/city" />

            <EditText
                android:id="@+id/city_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <!-- Tlf -->
            <TextView
                android:id="@+id/tlf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/tlf" />

            <EditText
                android:id="@+id/tlf_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <!-- Fax -->
            <TextView
                android:id="@+id/fax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/fax" />

            <EditText
                android:id="@+id/fax_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <!-- eMail -->
            <TextView
                android:id="@+id/eMail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/eMail" />

            <EditText
                android:id="@+id/eMail_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <!-- Save -->
            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_text_24"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>